# yomi-chatbot

./: .env.template  .gitignore  LANGGRAPH_AGENT_README.md  README.md  chat_history.db  documents.db  multi_agent_demo.py  pyproject.toml  quick_start.py  quick_start_multi_agent.py  start_api.py  test_prompt_system.py  test_structured_rag.py  vectors.index  vectors_metadata.pkl
Files/: ADVANCED_MODEL_MANAGEMENT_GUIDE.md  EMBEDDING_SYSTEM_GUIDE.md  FAISS_INSTALLATION.md  MULTI_AGENT_GUIDE.md  Multi-Agent-Design.md  RAG_UPGRADE_GUIDE.md
database/: chat_history.db  documents.db  vectors.index  vectors_metadata.pkl
src/agent/: base_agent.py  conversation_agent.py  document_agent.py  supervisor_agent.py  tool_agent.py
src/api/: streaming_api.py  streaming_handler.py
src/config/: agent_config.py  multi_agent_config.py  prompt_manager.py  settings.py  settings_store.py
src/database/: chat_db.py  document_db.py  faiss_document_db.py
src/embeddings/: azure_openai_embeddings.py
src/global_configuration/: decorators.py  embedding_decorators.py  embedding_registry.py  model_registry.py
src/graph/: nodes.py  state.py  tool_node.py
src/memory/: smart_memory_manager.py
src/model/: __init__.py  azure_openai_model.py  extended_models.py  openai_model.py
src/rag/: __init__.py  document_loader.py  rag_manager.py  rag_system.py
src/tests/: test_agent.py  test_faiss.py  test_llm_model.py  test_new_model_system.py  test_pdf_document_loader.py  test_rag.py
src/tools/: tool_manager.py
src/utils/: document_format_utils.py
static/: chat.html  debug.html  tool-test.html
(+21 files in other folders)
